--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,12 +1,8 @@
 use_frameworks!
+platform :ios, '10.0'
 
 target 'Droar_Example' do
   pod 'Droar', :path => '../'
-
-  target 'Droar_Tests' do
-    inherit! :search_paths
-
-    pod 'Quick', '~> 1.0.0'
-  pod 'Nimble', '~> 5.1.1'
-  end
+  pod 'SDVersion'
+  pod 'AFNetworking'
 end
