--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode9
+osx_image: xcode10
 language: swift
 cache: cocoapods
 podfile: Example/Podfile
@@ -10,6 +10,7 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - pod update --project-directory=Example
 script:
+- set -o pipefail && xcodebuild -workspace Example/Droar.xcworkspace -scheme Droar-Example -sdk iphonesimulator12.0 ONLY_ACTIVE_ARCH=NO SWIFT_VERSION=4.2 | xcpretty
 - set -o pipefail && xcodebuild -workspace Example/Droar.xcworkspace -scheme Droar-Example -sdk iphonesimulator11.0 ONLY_ACTIVE_ARCH=NO SWIFT_VERSION=4.0 | xcpretty
 - set -o pipefail && xcodebuild -workspace Example/Droar.xcworkspace -scheme Droar-Example -sdk iphonesimulator11.0 ONLY_ACTIVE_ARCH=NO SWIFT_VERSION=3.2 | xcpretty
 - pod lib lint
